infrastructure/k3s/base/platform/network-policies/allow-ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-controller
  labels:
    app.kubernetes.io/name: allow-ingress-controller
    app.kubernetes.io/component: network-security
    app.kubernetes.io/part-of: platform
    app.kubernetes.io/managed-by: kustomize
    caicedo.seguros/tier: platform
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 9011
        - protocol: TCP
          port: 8761
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 9011
        - protocol: TCP
          port: 8761
