infrastructure/k3s/base/platform/network-policies/allow-monitoring.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-monitoring-ingress
  labels:
    app.kubernetes.io/name: allow-monitoring-ingress
    app.kubernetes.io/component: network-security
    app.kubernetes.io/part-of: platform
    app.kubernetes.io/managed-by: kustomize
    caicedo.seguros/tier: platform
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              caicedo.seguros/tier: infrastructure
      ports:
        - protocol: TCP
          port: 8081
        - protocol: TCP
          port: 9090
        - protocol: TCP
          port: 9100
        - protocol: TCP
          port: 9115
        - protocol: TCP
          port: 9187
        - protocol: TCP
          port: 3101
        - protocol: TCP
          port: 9011

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-monitoring-egress
  labels:
    app.kubernetes.io/name: allow-monitoring-egress
    app.kubernetes.io/component: network-security
    app.kubernetes.io/part-of: platform
    app.kubernetes.io/managed-by: kustomize
    caicedo.seguros/tier: platform
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              caicedo.seguros/tier: infrastructure
      ports:
        - protocol: TCP
          port: 3100
        - protocol: TCP
          port: 9090
